// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ActiveField 1`] = `
<Field
  component={[Function]}
  disabled={false}
  helpText="An inactive webhook will not transmit any data."
  label="Active"
  name="active"
/>
`;

exports[`should render AuthDropDown 1`] = `
<Field
  component={[Function]}
  disabled={false}
  helpText={
    <span>
      Select "None" if your target URL has no authentication scheme.
       
      <ExternalLink
        to="https://support.sparkpost.com/customer/portal/articles/2112385"
      >
        More information
      </ExternalLink>
      .
    </span>
  }
  label="Authentication"
  name="auth"
  options={
    Array [
      Object {
        "label": "None",
        "value": "",
      },
      Object {
        "label": "Basic Auth",
        "value": "basic",
      },
      Object {
        "label": "OAuth 2.0",
        "value": "oauth2",
      },
    ]
  }
/>
`;

exports[`should render BasicAuthFields 1`] = `
<FieldSet
  legend="Basic Auth"
  legendHidden={true}
>
  <Stack>
    <Field
      component={[Function]}
      disabled={false}
      label="Username"
      name="basicUser"
      validate={[Function]}
    />
    <Field
      component={[Function]}
      disabled={false}
      label="Password"
      name="basicPass"
      type="password"
      validate={[Function]}
    />
  </Stack>
</FieldSet>
`;

exports[`should render EventsRadioGroup 1`] = `
<Field
  component={[Function]}
  label="Events"
  name="eventsRadio"
  options={
    Array [
      Object {
        "disabled": false,
        "label": "All events",
        "value": "all",
      },
      Object {
        "disabled": false,
        "label": "Select individual events",
        "value": "select",
      },
    ]
  }
/>
`;

exports[`should render NameField 1`] = `
<Field
  component={[Function]}
  disabled={false}
  helpText="A friendly label for your webhook, only used for display"
  label="Webhook Name"
  name="name"
  validate={
    Array [
      [Function],
      [Function],
    ]
  }
/>
`;

exports[`should render OAuth2Fields 1`] = `
<FieldSet
  legend="OAuth 2.0"
  legendHidden={true}
>
  <Stack>
    <Field
      component={[Function]}
      disabled={false}
      label="Client ID"
      name="clientId"
      validate={[Function]}
    />
    <Field
      component={[Function]}
      disabled={false}
      label="Client Secret"
      name="clientSecret"
      validate={[Function]}
    />
    <Field
      component={[Function]}
      disabled={false}
      label="Token URL"
      name="tokenURL"
      validate={[Function]}
    />
  </Stack>
</FieldSet>
`;

exports[`should render TargetField 1`] = `
<Field
  component={[Function]}
  disabled={false}
  label="Target URL"
  name="target"
  normalize={[Function]}
  validate={
    Array [
      [Function],
      [Function],
    ]
  }
/>
`;
